--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
       <div id="transaction">
         <h2 class="sr-only">Transações</h2>
 
-        <a href="#" onclick="toggle()" class="button new">+ Nova Transação</a>
+        <div id="button">
+  <a href="#" onclick="toggle()" class="button new">+ Nova Transação</a>
+        </div>
         <table id="data-table">
           <thead>
             <th>Descrição</th>
